// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell tests matches snapshot (number) 1`] = `
<View
  style={
    {
      "flex": 1,
      "marginLeft": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 12,
      }
    }
  >
    5
  </Text>
</View>
`;

exports[`Cell tests matches snapshot (text) 1`] = `
<View
  style={
    {
      "flex": 1,
      "marginLeft": 8,
    }
  }
>
  <Text
    style={
      {
        "color": "#000000",
        "fontSize": 12,
      }
    }
  >
    cell
  </Text>
</View>
`;

exports[`Set View tests matches snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#F3F7F0",
    }
  }
  testID="set-view-container-1"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-around",
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 12,
          }
        }
      >
        reps: 12
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 12,
          }
        }
      >
        weight: 20
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 12,
          }
        }
      >
        rest: 60
      </Text>
    </View>
    <Text
      allowFontScaling={false}
      onPress={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 20,
          },
          {
            "color": "#000000",
            "paddingRight": 8,
          },
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="remove-set-1"
    >
      
    </Text>
  </View>
</View>
`;

exports[`Set tests matches snapshot 1`] = `
<Modal
  hardwareAccelerated={false}
  testID="set-container"
  visible={true}
>
  <RCTSafeAreaView>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#003844",
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "padding": 8,
          "width": "100%",
        }
      }
      testID="title-container"
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 20,
          }
        }
      >
        Add set
      </Text>
      <Text
        allowFontScaling={false}
        onPress={[MockFunction]}
        selectable={false}
        style={
          [
            {
              "color": "white",
              "fontSize": 20,
            },
            undefined,
            {
              "fontFamily": "anticon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
        testID="back-button"
      >
        
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#dbdbdb",
          "padding": 8,
          "width": "100%",
        }
      }
    >
      <TextInput
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="please enter number off reps"
        style={
          {
            "backgroundColor": "#F3F7F0",
            "color": "#003844",
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
        testID="reps-input"
        value=""
      />
      <TextInput
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="please enter weight"
        style={
          {
            "backgroundColor": "#F3F7F0",
            "color": "#003844",
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
        testID="weight-input"
        value=""
      />
      <TextInput
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="please enter rest time"
        style={
          {
            "backgroundColor": "#F3F7F0",
            "color": "#003844",
            "fontSize": 16,
            "marginBottom": 4,
          }
        }
        testID="rest-input"
        value=""
      />
    </View>
  </RCTSafeAreaView>
</Modal>
`;

exports[`Weight tests matches snapshot 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#003844",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 8,
        "width": "100%",
      }
    }
    testID="title-container"
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 20,
        }
      }
    >
      Add Weight
    </Text>
    <Text
      allowFontScaling={false}
      onPress={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      selectable={false}
      style={
        [
          {
            "color": "white",
            "fontSize": 20,
          },
          undefined,
          {
            "fontFamily": "anticon",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="back-button"
    >
      
    </Text>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#dbdbdb",
        "padding": 8,
        "width": "100%",
      }
    }
    testID="weight-container"
  >
    <TextInput
      onChangeText={[Function]}
      placeholder="please enter name here"
      style={
        {
          "backgroundColor": "#F3F7F0",
          "color": "#003844",
          "fontSize": 16,
          "marginBottom": 4,
        }
      }
      testID="name-input"
      value=""
    />
    <TextInput
      onChangeText={[Function]}
      placeholder="please enter muscles used"
      style={
        {
          "backgroundColor": "#F3F7F0",
          "color": "#003844",
          "fontSize": 16,
          "marginBottom": 4,
        }
      }
      testID="muscles-used-input"
      value=""
    />
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      placeholder="please enter workout effort"
      style={
        {
          "backgroundColor": "#F3F7F0",
          "color": "#003844",
          "fontSize": 16,
          "marginBottom": 4,
        }
      }
      testID="workout-effort-input"
      value=""
    />
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="add-set"
    >
      <View
        style={
          [
            {},
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              {
                "color": "#003844",
              },
            ]
          }
        >
          add set
        </Text>
      </View>
    </View>
    <Modal
      hardwareAccelerated={false}
      testID="set-container"
      visible={false}
    />
  </View>,
]
`;
